--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,4 +30,5 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Testing
       run: |
-        python test.py
+        py.test test.py
+        
